# CppFinalProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/:  manipulation.cpp.B34594305560D96E.idx  AudioTrack.cpp.4C9511D7BC6EF8B6.idx  AudioTrack.cpp.FF25968F35427D13.idx  AudioTrack.h.25F26001E297F426.idx  AudioTrack.h.56ACB7D955ADCB74.idx  MainWindow.cpp.26B30836403B86A1.idx  MainWindow.cpp.97758113433CB1A7.idx  MainWindow.h.3BB0B6BB36A12F83.idx  MainWindow.h.AA829353E33C07DD.idx  TrackManager.cpp.7473921068EF78AB.idx  TrackManager.cpp.F7C5E48A0C7442F9.idx  TrackManager.h.173D0D87B24EA1ED.idx  TrackManager.h.68843D66A7651D9C.idx  dsp.cpp.7568508840FC9AFF.idx  dsp.h.98532D2F3DE99E3E.idx  importer.cpp.6F3A9CCED8694BC4.idx  importer.cpp.F4135EEE575E9936.idx  importer.h.1BB7F981A96576C1.idx  importer.h.86C198DDB0FE6AF8.idx  main.cpp.63787A9A21FEBA77.idx  main.cpp.F45362AD4E08436D.idx  manipulation.cpp.96190BE2980D091D.idx  manipulation.cpp.C7489215D6F043C8.idx  manipulation.h.0A9BDC9B4F53B612.idx  manipulation.h.C11F72BDC34C0BD8.idx
include/core/: AudioTrack.h  GUIHandler.h  TrackManager.h  audio_playback.h  manipulation.h
include/manipulations/: manipulation.h
include/ui/: MainWindow.h
include/util/: dsp.h  importer.h
src/: CMakeLists.txt  main.cpp
src/core/:  manipulation.cpp  AudioTrack.cpp  CMakeLists.txt  GUIHandler.cpp  TrackManager.cpp  manipulation.cpp
src/manipulations/: repitch.cpp  reverse.cpp  speed.cpp
src/ui/: CMakeLists.txt  MainWindow.cpp
src/util/: CMakeLists.txt  dsp.cpp  importer.cpp
test/: CombineTracks  README.md  TestCombineTracks.cpp  TestRepitch.cpp  TimeCombineWav.cpp
test/audio_samples/: 111  test
